# SNN

./: .gitignore  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
src/snn/: __init__.py  network.py  neuron.py  synapse.py  utils.py
tests/: test_neuron.py  test_synapse.py
