[project]
name = "snn"
version = "0.1.0"
description = "Spiking Neural Network"
requires-python = ">=3.10, <3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "tqdm",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true