[project]
name = "snn"
version = "0.1.0"
description = "Spiking Neural Network"
requires-python = ">=3.10, <3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "tqdm",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "--cov=src/snn"
empty_parameter_set_mark = "skip"

[tool.mypy]
python_version = "3.10"
ignore_errors = true          # temporary until you add type hints
exclude = ["tests/"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

